InstantPAC and PrivatePAC strings

--- a/doc/man/paccoin-qt.1
+++ b/doc/man/paccoin-qt.1
@@ -417,7 +417,7 @@ Enable publish hash transaction in <address>
 .HP
 \fB\-zmqpubhashtxlock=\fR<address>
 .IP
-Enable publish hash transaction (locked via InstantSend) in <address>
+Enable publish hash transaction (locked via InstantPAC) in <address>
 .HP
 \fB\-zmqpubhashgovernancevote=\fR<address>
 .IP
@@ -429,7 +429,7 @@ Enable publish hash of governance objects (like proposals) in <address>
 .HP
 \fB\-zmqpubhashinstantsenddoublespend=\fR<address>
 .IP
-Enable publish transaction hashes of attempted InstantSend double spend
+Enable publish transaction hashes of attempted InstantPAC double spend
 in <address>
 .HP
 \fB\-zmqpubrawblock=\fR<address>
@@ -442,11 +442,11 @@ Enable publish raw transaction in <address>
 .HP
 \fB\-zmqpubrawtxlock=\fR<address>
 .IP
-Enable publish raw transaction (locked via InstantSend) in <address>
+Enable publish raw transaction (locked via InstantPAC) in <address>
 .HP
 \fB\-zmqpubrawinstantsenddoublespend=\fR<address>
 .IP
-Enable publish raw transactions of attempted InstantSend double spend in
+Enable publish raw transactions of attempted InstantPAC double spend in
 <address>
 .PP
 Debugging/Testing options:
@@ -513,8 +513,8 @@ Use devnet chain with provided name
 .HP
 \fB\-litemode=\fR<n>
 .IP
-Disable all PAC specific functionality (Masternodes, PrivateSend,
-InstantSend, Governance) (0\-1, default: 0)
+Disable all PAC specific functionality (Masternodes, PrivatePAC,
+InstantPAC, Governance) (0\-1, default: 0)
 .HP
 \fB\-sporkaddr=\fR<hex>
 .IP
@@ -545,16 +545,16 @@ Lock masternodes from masternode configuration file (default: 1)
 .IP
 Set the masternode private key
 .PP
-PrivateSend options:
+PrivatePAC options:
 .HP
 \fB\-enableprivatesend=\fR<n>
 .IP
-Enable use of automated PrivateSend for funds stored in this wallet
+Enable use of automated PrivatePAC for funds stored in this wallet
 (0\-1, default: 0)
 .HP
 \fB\-privatesendmultisession=\fR<n>
 .IP
-Enable multiple PrivateSend mixing sessions per block, experimental
+Enable multiple PrivatePAC mixing sessions per block, experimental
 (0\-1, default: 0)
 .HP
 \fB\-privatesendsessions=\fR<n>
@@ -572,20 +572,20 @@ Keep N PAC anonymized (2\-21000000, default: 1000)
 .HP
 \fB\-liquidityprovider=\fR<n>
 .IP
-Provide liquidity to PrivateSend by infrequently mixing coins on a
+Provide liquidity to PrivatePAC by infrequently mixing coins on a
 continual basis (0\-100, default: 0, 1=very frequent, high fees,
 100=very infrequent, low fees)
 .PP
-InstantSend options:
+InstantPAC options:
 .HP
 \fB\-enableinstantsend=\fR<n>
 .IP
-Enable InstantSend, show confirmations for locked transactions (0\-1,
+Enable InstantPAC, show confirmations for locked transactions (0\-1,
 default: 1)
 .HP
 \fB\-instantsendnotify=\fR<cmd>
 .IP
-Execute command when a wallet InstantSend transaction is successfully
+Execute command when a wallet InstantPAC transaction is successfully
 locked (%s in cmd is replaced by TxID)
 .PP
 Node relay options:
